# adze

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  backup-gcs.sh  claude-login.sh  compile.py  docker-compose.yml  flask_server.py  init-certs.sh  pyproject.toml  requirements.txt  restart.sh  status-update.sh
.claude/commands/: compile-docs.md
_shared/: ARTIST-SYSTEM.md  CLAUDE.md  admin.html  admin_api.py  aider_bridge.py  auth.py  dashboard.html  db.py  external_artist.py  portal.html  remote_fs.py  vibe_agent.py
_shared/dashboard-themes/: CLAUDE.md
_shared/docs/: 00-behaviour.md  01-architecture.md  02-site-format.md  03-api.md  04-widgets.md  05-deployment.md  DOCS_GUIDE.md  deployment-internal.md.skip
_shared/features/: CLAUDE.md  __init__.py  bookings.py
_shared/widgets/: CLAUDE.md  WIDGET_GUIDE.md.retired
artists/: CLAUDE.md
artists/_template/: config.json  default-styles.css
artists/bodacious/: config.json
artists/bodaciousfm/: config.json
artists/chris/: api.py  bookings.db  config.json  default-styles.css
artists/cliveburgess/: calibration.html  config.json  index_redirect.html
artists/dunmca/: config.json
artists/example-artist/: config.json
artists/hannah/: config.json
artists/harryhudson/: config.json
artists/jackdt/: _shared_styles.txt  config.json
artists/lastplacesite/: config.json  default-styles.css
artists/leahmclaine/: config.json
artists/lydialott/: config.json
design-language/: CLAUDE.md  README.md
nginx/: CLAUDE.md  adze.studio.conf
scripts/: add-external-artist.sh
shared/: CLAUDE.md
(+232 files in other folders)
